<resources>
    <string name="app_name">Quizian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_code">Enter the Code</string>
    <string name="prepare_quiz"><![CDATA[Prepare Quiz >>]]></string>
    <string name="lt_lt_add_another_answer"><![CDATA[<<\n Add Another Answer]]></string>
    <string name="remove_answer"><![CDATA[>>\nRemove Answer ]]></string>
    <string name="previous_question">>>\nPrevious Question</string>
    <string name="next_question"><![CDATA[<<\n Next Question\n]]></string>
    <string name="enter_at_least_2_asnwers_please">Enter at least 2 asnwers, please</string>
    <string name="are_you_sure_you_want_to_cancel_the_quiz">Are you sure you want to cancel the Quiz?</string>
    <string name="confirm_cancelation">Confirm Cancellation</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="question">Question</string>
    <string name="enter_the_question_please">* Enter the question, please</string>
    <string name="finish">Finish</string>
    <string name="save_changes">Save Changes</string>
    <string name="send_the_quiz">Send the Quiz</string>
    <string name="search">Search</string>
    <string name="the_results_will_appear_after_the_quiz_has_ended">The results will appear after the quiz has ended</string>
    <string name="lt_lt_go_home"><![CDATA[<< Go Home]]></string>
    <string name="click_long_press_on_the_correct_answer_please">Click long press on the correct answer, please</string>
</resources>