<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".UI.fragments.Home">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:fontFamily="@font/allan_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        tools:alpha="1" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:importantForAccessibility="no"
        android:src="@drawable/quizian" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_the_code"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/prepare_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:text="@string/prepare_quiz"
        android:textSize="15sp" />


</LinearLayout>