<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".UI.fragments.Quiz">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/purple_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/num_of_ques"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:layout_marginRight="10dp"
                    android:text="1/1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="15:00"
        android:textColor="@color/red"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="Write Your Question"
        android:text="@string/save_changes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_answer1"
                app:cornerRadius="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:elevation="10dp"
                android:ems="5"
                android:gravity="center"
                android:hint="1st Answer"
                android:padding="20dp"
                android:text="sddsa"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_answer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cornerRadius="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:elevation="10dp"
                android:ems="5"
                android:gravity="center"
                android:hint="2nd Answer"
                android:padding="20dp"
                android:text="sdf"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_answer3"
                android:layout_width="0dp"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_height="wrap_content"
                app:cornerRadius="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:elevation="10dp"
                android:ems="5"
                android:gravity="center"
                android:hint="3rd Answer"
                android:padding="20dp"
                android:text="sdfds"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_answer4"
                android:layout_width="0dp"
                app:cornerRadius="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:elevation="10dp"
                android:gravity="center"
                android:hint="4th Answer"
                android:padding="20dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/next_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="#00000000"
        android:text="@string/next_question"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>